# estudos_univesp

./: README.md
Algoritmos e Programação de Computadores I/Exercicios/: COM - ECEC 04.py  COM - EXEC 03.py  COM - EXEC 05.py  prova.py
Algoritmos e Programação de Computadores I/Semana 1/: COM - EXEC 02 - DADOS.csv  COM - EXEC 02 - RESULTADO.csv  COM - EXEC 02.py  Introdução à Computação Usando Python - EXEC.PY  pyproject.toml
