[tool.poetry]
name = "semana 1"
version = "0.1.0"
description = ""
authors = ["sposigor <sposigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
pylint = "^2.12.2"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
